[package]
name = "midimon"
version = "0.2.0"
edition = "2021"
rust-version = "1.74"
authors = ["Oliver Rockstedt <info@sourcebox.de>"]
description = "Terminal MIDI Monitor"
license = "MIT"
readme = "README.md"
repository = "https://github.com/sourcebox/midimon"
categories = ["command-line-utilities", "multimedia"]
keywords = ["midi", "monitor", "terminal"]

[dependencies]
clap = "4.5.27"
midir = "0.9.1"
num_enum = "0.7.3"

[profile.release]
lto = true
strip = true
