[package]
name = "midimon"
version = "0.2.0"
edition = "2024"
rust-version = "1.88"
authors = ["Oliver Rockstedt <info@sourcebox.de>"]
description = "Terminal MIDI Monitor"
license = "MIT"
readme = "README.md"
repository = "https://github.com/sourcebox/midimon"
categories = ["command-line-utilities", "multimedia"]
keywords = ["midi", "monitor", "terminal"]

[dependencies]
clap = "4.5.51"
midir = "0.10.3"
num_enum = "0.7.5"

[profile.release]
strip = true

[profile.release-lto]
inherits = "release"
lto = true

[lints.rust]
missing_docs = "warn"
unsafe_code = "deny"

[lints.clippy]
std_instead_of_core = "warn"
